<?xml version="1.0"?>
<package format="2">
  <name>pointgrey_camera_driver</name>
  <version>0.13.4</version>
  <description>Point Grey camera driver based on libflycapture2.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pointgrey_camera_driver</url>

  <author>Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>curl</build_depend>  <!-- to get ca-certificates for downloading flycapture -->
  <build_depend>dpkg</build_depend>  <!-- for unpacking flycapture debs -->
  <build_depend>resource_monitor</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>wfov_camera_msgs</run_depend>
  <run_depend>image_exposure_msgs</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>resource_monitor</run_depend>

  <!-- Dependencies of libflycapture -->
  <depend>libusb-1.0-dev</depend>
  <depend>libraw1394-dev</depend>

  <exec_depend>image_proc</exec_depend>
  <exec_depend>stereo_image_proc</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
